Add WrongStartRuleException